관리자 홈 개발

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=a98788f077a62b5216ea",
+    "/dist/App.js": "/dist/App.js?id=e7cf2ba28081723274a4",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=cdb6723d1e910bb3e567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=5075e3f6cc3aadd9d735",
@@ -9,7 +9,7 @@
     "/dist/css/ReviewWritePage.css": "/dist/css/ReviewWritePage.css?id=2bd9bd199a338afed7f5",
     "/dist/css/StoreItemDetailPage.css": "/dist/css/StoreItemDetailPage.css?id=3871c86f401d31042b01",
     "/dist/css/StoreOrderPage.css": "/dist/css/StoreOrderPage.css?id=2d3a7340b8e319ccbd55",
-    "/dist/css/StoreOrderItem.css": "/dist/css/StoreOrderItem.css?id=d09b77c4209548a6226c",
+    "/dist/css/StoreOrderItem.css": "/dist/css/StoreOrderItem.css?id=02aa01133bf98f9a6b1f",
     "/dist/css/StoreOrderComplitePage.css": "/dist/css/StoreOrderComplitePage.css?id=56a2597180fbd590eb09",
     "/dist/css/StoreReceiptItem.css": "/dist/css/StoreReceiptItem.css?id=39b84289972fb10e2da9",
     "/dist/css/StoreDetailReceipt.css": "/dist/css/StoreDetailReceipt.css?id=425b8299d93f5cb6c8f2",
@@ -17,7 +17,7 @@
     "/dist/css/StoreManager.css": "/dist/css/StoreManager.css?id=0bbde8d0c14649cd03e7",
     "/dist/css/StoreManagerTabAskOrderListPage.css": "/dist/css/StoreManagerTabAskOrderListPage.css?id=5a92157e0df9266ea62b",
     "/dist/css/FileUploader.css": "/dist/css/FileUploader.css?id=543be1fe72d0e0771066",
-    "/dist/css/StoreManagerTabStoreInfoPage.css": "/dist/css/StoreManagerTabStoreInfoPage.css?id=543b91a807813d7294e5",
+    "/dist/css/StoreManagerTabStoreInfoPage.css": "/dist/css/StoreManagerTabStoreInfoPage.css?id=28b00a8918d0f0250dec",
     "/dist/css/StoreManagerTabItemPage.css": "/dist/css/StoreManagerTabItemPage.css?id=3569e159160ae52aa31c",
     "/dist/css/StoreAddItemPage.css": "/dist/css/StoreAddItemPage.css?id=8084757337e8b371ca6b",
     "/dist/css/StoreManagerTabOrderListPage.css": "/dist/css/StoreManagerTabOrderListPage.css?id=3bb1c33faaa6d07eac88",
@@ -42,10 +42,14 @@
     "/dist/css/Popup_refund.css": "/dist/css/Popup_refund.css?id=bbfed68bcdc9690c9c41",
     "/dist/css/StoreItemDetailReviewList.css": "/dist/css/StoreItemDetailReviewList.css?id=5cb0158400096b859e7d",
     "/dist/css/StoreItemDetailReviewItem.css": "/dist/css/StoreItemDetailReviewItem.css?id=e5d6ebdd0c68c68650e3",
-    "/dist/css/ImageCroper.css": "/dist/css/ImageCroper.css?id=dd31b309fddb3eddfb69",
-    "/dist/css/StoreManagerTabHomePage.css": "/dist/css/StoreManagerTabHomePage.css?id=0f536343d97e25feac7b",
-    "/dist/css/StoreDoIt.css": "/dist/css/StoreDoIt.css?id=e880b347c46c6fa57bd0",
-    "/dist/App.js.map": "/dist/App.js.map?id=3d36233d7a1b3831e554",
+    "/dist/css/ImageCroper.css": "/dist/css/ImageCroper.css?id=b25217df9263b512d744",
+    "/dist/css/StoreManagerTabHomePage.css": "/dist/css/StoreManagerTabHomePage.css?id=3db1c6518f2107a5b33b",
+    "/dist/css/StoreDoIt.css": "/dist/css/StoreDoIt.css?id=e70ff5977f33aa25d447",
+    "/dist/css/StoreManagerHome_Item.css": "/dist/css/StoreManagerHome_Item.css?id=bb594ba8f82bbdcd76ec",
+    "/dist/css/StoreManagerHome_newOrderItem.css": "/dist/css/StoreManagerHome_newOrderItem.css?id=694ba56b30cfbdb51969",
+    "/dist/css/Popup_StoreReceiptItem.css": "/dist/css/Popup_StoreReceiptItem.css?id=025e49aa39942c87cc87",
+    "/dist/css/Profile.css": "/dist/css/Profile.css?id=c339775685d38dd231e9",
+    "/dist/App.js.map": "/dist/App.js.map?id=68f900e323d6ab797275",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=43a79d815d360049fb81",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=133e209cfd058c7514e9",
@@ -55,7 +59,7 @@
     "/dist/css/ReviewWritePage.css.map": "/dist/css/ReviewWritePage.css.map?id=d67f4f58d6b467b25ec8",
     "/dist/css/StoreItemDetailPage.css.map": "/dist/css/StoreItemDetailPage.css.map?id=601139bf07d5a5fb4b5e",
     "/dist/css/StoreOrderPage.css.map": "/dist/css/StoreOrderPage.css.map?id=efc7ed9f6da9917c003a",
-    "/dist/css/StoreOrderItem.css.map": "/dist/css/StoreOrderItem.css.map?id=154116e54196fa49ae3b",
+    "/dist/css/StoreOrderItem.css.map": "/dist/css/StoreOrderItem.css.map?id=c23e85b2ba668dea3f7d",
     "/dist/css/StoreOrderComplitePage.css.map": "/dist/css/StoreOrderComplitePage.css.map?id=c54225432e11c311892d",
     "/dist/css/StoreReceiptItem.css.map": "/dist/css/StoreReceiptItem.css.map?id=e143f211e65fbf89e5ff",
     "/dist/css/StoreDetailReceipt.css.map": "/dist/css/StoreDetailReceipt.css.map?id=d407a7bb56b95adfa9eb",
@@ -63,7 +67,7 @@
     "/dist/css/StoreManager.css.map": "/dist/css/StoreManager.css.map?id=6b43c38428b0505f12f2",
     "/dist/css/StoreManagerTabAskOrderListPage.css.map": "/dist/css/StoreManagerTabAskOrderListPage.css.map?id=98d51127ea54329d7a7b",
     "/dist/css/FileUploader.css.map": "/dist/css/FileUploader.css.map?id=6009d117207f82c8fd83",
-    "/dist/css/StoreManagerTabStoreInfoPage.css.map": "/dist/css/StoreManagerTabStoreInfoPage.css.map?id=eac9a80eacf251c7f27c",
+    "/dist/css/StoreManagerTabStoreInfoPage.css.map": "/dist/css/StoreManagerTabStoreInfoPage.css.map?id=1debdd8ff0d1db9a8246",
     "/dist/css/StoreManagerTabItemPage.css.map": "/dist/css/StoreManagerTabItemPage.css.map?id=0976e931250e049781ce",
     "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=de31f9380c6fe7468c86",
     "/dist/css/StoreManagerTabOrderListPage.css.map": "/dist/css/StoreManagerTabOrderListPage.css.map?id=2c6cd3d5ebe2b4dd3be3",
@@ -88,7 +92,11 @@
     "/dist/css/Popup_refund.css.map": "/dist/css/Popup_refund.css.map?id=653886adfed9968b57cd",
     "/dist/css/StoreItemDetailReviewList.css.map": "/dist/css/StoreItemDetailReviewList.css.map?id=ef6ebb3b8906f3991ee9",
     "/dist/css/StoreItemDetailReviewItem.css.map": "/dist/css/StoreItemDetailReviewItem.css.map?id=a901e0d6e0231d8b8a39",
-    "/dist/css/ImageCroper.css.map": "/dist/css/ImageCroper.css.map?id=73b884835db99b4fd5c6",
-    "/dist/css/StoreManagerTabHomePage.css.map": "/dist/css/StoreManagerTabHomePage.css.map?id=687f8dab5cfb48dd2d01",
-    "/dist/css/StoreDoIt.css.map": "/dist/css/StoreDoIt.css.map?id=637ac32ba51a412f29c2"
+    "/dist/css/ImageCroper.css.map": "/dist/css/ImageCroper.css.map?id=2299f5f40568df033cf3",
+    "/dist/css/StoreManagerTabHomePage.css.map": "/dist/css/StoreManagerTabHomePage.css.map?id=f5f1a5486993ebaecd37",
+    "/dist/css/StoreDoIt.css.map": "/dist/css/StoreDoIt.css.map?id=54df456fda71eea42e59",
+    "/dist/css/StoreManagerHome_Item.css.map": "/dist/css/StoreManagerHome_Item.css.map?id=0cdd9fdc71c362e30862",
+    "/dist/css/StoreManagerHome_newOrderItem.css.map": "/dist/css/StoreManagerHome_newOrderItem.css.map?id=cc11e9625e5aae449dcf",
+    "/dist/css/Popup_StoreReceiptItem.css.map": "/dist/css/Popup_StoreReceiptItem.css.map?id=9d844c988659e31b846d",
+    "/dist/css/Profile.css.map": "/dist/css/Profile.css.map?id=12a396819e01d2b08a63"
 }
