서치 기능 개발 팝업 스크롤 락 기능 개발

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=113e11230a13edda4a7f",
+    "/dist/App.js": "/dist/App.js?id=f0d83a3eec2404f00e0b",
     "/dist/css/Global.css": "/dist/css/Global.css?id=2c905dc616c2f75a177c",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=09944080d1cc61fdafa3",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=5075e3f6cc3aadd9d735",
@@ -56,10 +56,15 @@
     "/dist/css/Home_Thumb_Recommend_Creator_List.css": "/dist/css/Home_Thumb_Recommend_Creator_List.css?id=a57af9d304d42c2eed10",
     "/dist/css/Home_Thumb_Tag.css": "/dist/css/Home_Thumb_Tag.css?id=3a2e5741214500a47271",
     "/dist/css/Home_Thumb_Attention_Item.css": "/dist/css/Home_Thumb_Attention_Item.css?id=1eb4c350cc5680223549",
-    "/dist/css/Home_Thumb_Container_List.css": "/dist/css/Home_Thumb_Container_List.css?id=df76a447aaadd67de680",
-    "/dist/css/Home_Thumb_Container_Item.css": "/dist/css/Home_Thumb_Container_Item.css?id=96191a550094f2a4463e",
+    "/dist/css/Home_Thumb_Container_List.css": "/dist/css/Home_Thumb_Container_List.css?id=af2a6c015183bed6622a",
+    "/dist/css/Home_Thumb_Container_Item.css": "/dist/css/Home_Thumb_Container_Item.css?id=f206e3bbea0c93f99820",
     "/dist/css/Home_Thumb_Stores_Item.css": "/dist/css/Home_Thumb_Stores_Item.css?id=2120c032ebda36a0bd55",
-    "/dist/App.js.map": "/dist/App.js.map?id=eca977091dbe821e68f3",
+    "/dist/css/SearchPage.css": "/dist/css/SearchPage.css?id=4ba47af94098ebc1db36",
+    "/dist/css/SearchResultPage.css": "/dist/css/SearchResultPage.css?id=61ba57a214a6ddd39f46",
+    "/dist/css/Find_Result_Stores_item.css": "/dist/css/Find_Result_Stores_item.css?id=f3786bb9cf21a02e3c23",
+    "/dist/css/Home_Thumb_Container_Project_Item.css": "/dist/css/Home_Thumb_Container_Project_Item.css?id=fb60faf8398a549261b7",
+    "/dist/css/Thumb_Recommend_item.css": "/dist/css/Thumb_Recommend_item.css?id=416dbffe03030feb5bab",
+    "/dist/App.js.map": "/dist/App.js.map?id=391de5c4cc8ce1e4d33a",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=9b08a5b0b2d748c26dd5",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=95ca17fb6fe47aa00221",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=133e209cfd058c7514e9",
@@ -116,7 +121,12 @@
     "/dist/css/Home_Thumb_Recommend_Creator_List.css.map": "/dist/css/Home_Thumb_Recommend_Creator_List.css.map?id=e60e4a206e86c266adcf",
     "/dist/css/Home_Thumb_Tag.css.map": "/dist/css/Home_Thumb_Tag.css.map?id=f6a8f0177da57313b985",
     "/dist/css/Home_Thumb_Attention_Item.css.map": "/dist/css/Home_Thumb_Attention_Item.css.map?id=4416f00f8dbbbc5b531b",
-    "/dist/css/Home_Thumb_Container_List.css.map": "/dist/css/Home_Thumb_Container_List.css.map?id=31007c1ba34706fc9e9c",
-    "/dist/css/Home_Thumb_Container_Item.css.map": "/dist/css/Home_Thumb_Container_Item.css.map?id=407fa8f93f856b11d554",
-    "/dist/css/Home_Thumb_Stores_Item.css.map": "/dist/css/Home_Thumb_Stores_Item.css.map?id=15a83583d264a57d8a25"
+    "/dist/css/Home_Thumb_Container_List.css.map": "/dist/css/Home_Thumb_Container_List.css.map?id=07d87b16cb9771a9de3f",
+    "/dist/css/Home_Thumb_Container_Item.css.map": "/dist/css/Home_Thumb_Container_Item.css.map?id=2ef3dc3357110b543e67",
+    "/dist/css/Home_Thumb_Stores_Item.css.map": "/dist/css/Home_Thumb_Stores_Item.css.map?id=15a83583d264a57d8a25",
+    "/dist/css/SearchPage.css.map": "/dist/css/SearchPage.css.map?id=4c5fd587f883fd939ec6",
+    "/dist/css/SearchResultPage.css.map": "/dist/css/SearchResultPage.css.map?id=b0030cb34dd64119dc4b",
+    "/dist/css/Find_Result_Stores_item.css.map": "/dist/css/Find_Result_Stores_item.css.map?id=4a19f1147882b9bf0c69",
+    "/dist/css/Home_Thumb_Container_Project_Item.css.map": "/dist/css/Home_Thumb_Container_Project_Item.css.map?id=2417633a136ecf32860a",
+    "/dist/css/Thumb_Recommend_item.css.map": "/dist/css/Thumb_Recommend_item.css.map?id=4b113b5cf60dd539cad7"
 }
