메인 캐러셀 개발 (테스트)

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=00a65e41a6896938ac95",
+    "/dist/App.js": "/dist/App.js?id=efb78a18375245db0761",
     "/dist/css/Global.css": "/dist/css/Global.css?id=2c905dc616c2f75a177c",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=09944080d1cc61fdafa3",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=5075e3f6cc3aadd9d735",
@@ -64,7 +64,8 @@
     "/dist/css/Find_Result_Stores_item.css": "/dist/css/Find_Result_Stores_item.css?id=f3786bb9cf21a02e3c23",
     "/dist/css/Home_Thumb_Container_Project_Item.css": "/dist/css/Home_Thumb_Container_Project_Item.css?id=ee737e89ab1f5282b16c",
     "/dist/css/Thumb_Recommend_item.css": "/dist/css/Thumb_Recommend_item.css?id=416dbffe03030feb5bab",
-    "/dist/App.js.map": "/dist/App.js.map?id=8dd6dc86226aa1a2ec4d",
+    "/dist/css/Home_Top_Banner.css": "/dist/css/Home_Top_Banner.css?id=e1c34e7bbdf4f8ecfb86",
+    "/dist/App.js.map": "/dist/App.js.map?id=0ccb2f7cba9fb302b1ec",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=9b08a5b0b2d748c26dd5",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=95ca17fb6fe47aa00221",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=133e209cfd058c7514e9",
@@ -128,5 +129,6 @@
     "/dist/css/SearchResultPage.css.map": "/dist/css/SearchResultPage.css.map?id=b0030cb34dd64119dc4b",
     "/dist/css/Find_Result_Stores_item.css.map": "/dist/css/Find_Result_Stores_item.css.map?id=4a19f1147882b9bf0c69",
     "/dist/css/Home_Thumb_Container_Project_Item.css.map": "/dist/css/Home_Thumb_Container_Project_Item.css.map?id=9ee8991d093d1962390c",
-    "/dist/css/Thumb_Recommend_item.css.map": "/dist/css/Thumb_Recommend_item.css.map?id=4b113b5cf60dd539cad7"
+    "/dist/css/Thumb_Recommend_item.css.map": "/dist/css/Thumb_Recommend_item.css.map?id=4b113b5cf60dd539cad7",
+    "/dist/css/Home_Top_Banner.css.map": "/dist/css/Home_Top_Banner.css.map?id=a2da8c1bb6752946fd75"
 }
