--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "array-random": "0.0.1",
     "axios": "^0.20.0",
     "browser-image-compression": "^1.0.13",
+    "lottie-web": "^5.7.6",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "quill": "^1.3.7",
     "react-alice-carousel": "^2.4.0",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-countup": "^4.3.3",
     "react-easy-crop": "^3.3.1",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroll-component": "^5.1.0",
