--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "react-alice-carousel": "^2.4.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-countup": "^4.3.3",
+    "react-device-detect": "^1.17.0",
     "react-easy-crop": "^3.3.1",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroll-component": "^5.1.0",
+    "react-loading": "^2.0.3",
     "react-player": "^2.7.2",
     "react-redux": "^7.2.1",
     "react-toastify": "^7.0.3",
