5gb 이상 업로드 버그 수정 / 로그인 페이지 더미 코드 임시 업로드

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=0410f982d75286b4cd7e",
+    "/dist/App.js": "/dist/App.js?id=8ae6d5f1055f72638f0b",
     "/dist/css/Global.css": "/dist/css/Global.css?id=2c905dc616c2f75a177c",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=09944080d1cc61fdafa3",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
@@ -67,7 +67,7 @@
     "/dist/css/Home_Top_Banner.css": "/dist/css/Home_Top_Banner.css?id=eb0c342c7bf0c9d92ed5",
     "/dist/css/Carousel_Item_Counting.css": "/dist/css/Carousel_Item_Counting.css?id=cb17c997fc1f454f5ff6",
     "/dist/css/CompletedFileUpLoader.css": "/dist/css/CompletedFileUpLoader.css?id=bf9538be12a6556fb730",
-    "/dist/App.js.map": "/dist/App.js.map?id=afc98c8f5aa7c7a848fd",
+    "/dist/App.js.map": "/dist/App.js.map?id=ba57f9a19cb4ec54dd7b",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=9b08a5b0b2d748c26dd5",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=95ca17fb6fe47aa00221",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
@@ -134,5 +134,7 @@
     "/dist/css/Thumb_Recommend_item.css.map": "/dist/css/Thumb_Recommend_item.css.map?id=4b113b5cf60dd539cad7",
     "/dist/css/Home_Top_Banner.css.map": "/dist/css/Home_Top_Banner.css.map?id=97830bc1c460721e0796",
     "/dist/css/Carousel_Item_Counting.css.map": "/dist/css/Carousel_Item_Counting.css.map?id=a71e7cb8a118099a2fad",
-    "/dist/css/CompletedFileUpLoader.css.map": "/dist/css/CompletedFileUpLoader.css.map?id=07a6bb4b846b3ddd7fc5"
+    "/dist/css/CompletedFileUpLoader.css.map": "/dist/css/CompletedFileUpLoader.css.map?id=07a6bb4b846b3ddd7fc5",
+    "/dist/App_Login.js": "/dist/App_Login.js?id=a82d95fb1cdc02cc0634",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=f16799a786e2a9b70477"
 }
