회원정보 수정 개선

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/dist/App.js": "/dist/App.js?id=8bd7fe0b96f9a3edb44b",
-    "/dist/css/Global.css": "/dist/css/Global.css?id=2c905dc616c2f75a177c",
+    "/dist/App.js": "/dist/App.js?id=ed91bc5ae6fe21d106bd",
+    "/dist/css/Global.css": "/dist/css/Global.css?id=06c67255ae20ebd02a42",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=09944080d1cc61fdafa3",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
     "/dist/css/StoreDetailPage.css": "/dist/css/StoreDetailPage.css?id=99d7d7f2e08cb2f6fef5",
@@ -76,8 +76,11 @@
     "/dist/css/LoginForgetEmailPage.css": "/dist/css/LoginForgetEmailPage.css?id=b52206cb4aec50766f3f",
     "/dist/css/LoginSNSSetEmailPage.css": "/dist/css/LoginSNSSetEmailPage.css?id=c904a399f6a0d28ef3f5",
     "/dist/css/LoginJoinPage.css": "/dist/css/LoginJoinPage.css?id=d109f3476237fa736fbb",
-    "/dist/App.js.map": "/dist/App.js.map?id=f351fbf41fdec8575609",
-    "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=9b08a5b0b2d748c26dd5",
+    "/dist/css/App_modify.css": "/dist/css/App_modify.css?id=0ada1b421457acdc2418",
+    "/dist/css/InputBox.css": "/dist/css/InputBox.css?id=ff0ef3f42a8aa7f1b201",
+    "/dist/css/PasswordResetPage.css": "/dist/css/PasswordResetPage.css?id=c0a4098416a1468e30b2",
+    "/dist/App.js.map": "/dist/App.js.map?id=d45e700ef75a1653eb04",
+    "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=7657d00a46468aa263aa",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=95ca17fb6fe47aa00221",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
     "/dist/css/StoreDetailPage.css.map": "/dist/css/StoreDetailPage.css.map?id=049197df02353a88d0dc",
@@ -153,6 +156,11 @@
     "/dist/css/LoginForgetEmailPage.css.map": "/dist/css/LoginForgetEmailPage.css.map?id=534464286b46ed933be0",
     "/dist/css/LoginSNSSetEmailPage.css.map": "/dist/css/LoginSNSSetEmailPage.css.map?id=69e49e66bd5c981e68aa",
     "/dist/css/LoginJoinPage.css.map": "/dist/css/LoginJoinPage.css.map?id=ab9888458ffb4e7e4a79",
-    "/dist/App_Login.js": "/dist/App_Login.js?id=7f94b16a37791d84807d",
-    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=010c643bf7a9c5fc4702"
+    "/dist/css/App_modify.css.map": "/dist/css/App_modify.css.map?id=ed82a8245c095783c1aa",
+    "/dist/css/InputBox.css.map": "/dist/css/InputBox.css.map?id=4cf06caf5946452721ed",
+    "/dist/css/PasswordResetPage.css.map": "/dist/css/PasswordResetPage.css.map?id=946184b6b40c33c150db",
+    "/dist/App_Login.js": "/dist/App_Login.js?id=6bbfbe363b4bf734e29a",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=a1d8ed838b704b4894e5",
+    "/dist/App_modify.js": "/dist/App_modify.js?id=946577a3e65c1639e11a",
+    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=e9b6a23cfe5e1e315d78"
 }
