--- a/package.json
+++ b/package.json
@@ -60,10 +60,9 @@
     "react-infinite-scroll-component": "^5.1.0",
     "react-loading": "^2.0.3",
     "react-player": "^2.7.2",
-    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.3",
-    "redux": "^4.0.5",
+    "react-tooltip": "^4.2.17",
     "scrollbooster": "^3.0.2",
     "universal-cookie": "^4.0.4"
   }
