회원탈퇴 기능 추가

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=ed91bc5ae6fe21d106bd",
+    "/dist/App.js": "/dist/App.js?id=c4e729c9b99e874e2e67",
     "/dist/css/Global.css": "/dist/css/Global.css?id=06c67255ae20ebd02a42",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=09944080d1cc61fdafa3",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
@@ -76,10 +76,12 @@
     "/dist/css/LoginForgetEmailPage.css": "/dist/css/LoginForgetEmailPage.css?id=b52206cb4aec50766f3f",
     "/dist/css/LoginSNSSetEmailPage.css": "/dist/css/LoginSNSSetEmailPage.css?id=c904a399f6a0d28ef3f5",
     "/dist/css/LoginJoinPage.css": "/dist/css/LoginJoinPage.css?id=d109f3476237fa736fbb",
-    "/dist/css/App_modify.css": "/dist/css/App_modify.css?id=0ada1b421457acdc2418",
+    "/dist/css/App_modify.css": "/dist/css/App_modify.css?id=6d7bc08bcb8a050a4635",
     "/dist/css/InputBox.css": "/dist/css/InputBox.css?id=ff0ef3f42a8aa7f1b201",
     "/dist/css/PasswordResetPage.css": "/dist/css/PasswordResetPage.css?id=c0a4098416a1468e30b2",
-    "/dist/App.js.map": "/dist/App.js.map?id=d45e700ef75a1653eb04",
+    "/dist/css/WithdrawalPage.css": "/dist/css/WithdrawalPage.css?id=b5d154c6586872281c91",
+    "/dist/css/Page_pc_776_Controller.css": "/dist/css/Page_pc_776_Controller.css?id=a9984e988097fb2ab199",
+    "/dist/App.js.map": "/dist/App.js.map?id=cf6118a366054c4241b6",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=7657d00a46468aa263aa",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=95ca17fb6fe47aa00221",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
@@ -156,11 +158,15 @@
     "/dist/css/LoginForgetEmailPage.css.map": "/dist/css/LoginForgetEmailPage.css.map?id=534464286b46ed933be0",
     "/dist/css/LoginSNSSetEmailPage.css.map": "/dist/css/LoginSNSSetEmailPage.css.map?id=69e49e66bd5c981e68aa",
     "/dist/css/LoginJoinPage.css.map": "/dist/css/LoginJoinPage.css.map?id=ab9888458ffb4e7e4a79",
-    "/dist/css/App_modify.css.map": "/dist/css/App_modify.css.map?id=ed82a8245c095783c1aa",
+    "/dist/css/App_modify.css.map": "/dist/css/App_modify.css.map?id=c74292cc1a9d6510521d",
     "/dist/css/InputBox.css.map": "/dist/css/InputBox.css.map?id=4cf06caf5946452721ed",
     "/dist/css/PasswordResetPage.css.map": "/dist/css/PasswordResetPage.css.map?id=946184b6b40c33c150db",
-    "/dist/App_Login.js": "/dist/App_Login.js?id=3254204b4f15b94bae85",
-    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=22f6b58f31be7076366b",
-    "/dist/App_modify.js": "/dist/App_modify.js?id=c2e268e6e2b8b8d27bc0",
-    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=ed033071ce5bf0d85fb2"
+    "/dist/css/WithdrawalPage.css.map": "/dist/css/WithdrawalPage.css.map?id=9f5ad2c6bc0df94b1263",
+    "/dist/css/Page_pc_776_Controller.css.map": "/dist/css/Page_pc_776_Controller.css.map?id=e977b6446e08797a8c1f",
+    "/dist/App_Login.js": "/dist/App_Login.js?id=88d3c47469a24f22e7a3",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=2eab8ecb9b56f714d16d",
+    "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=06a38d86137c4dcbdc2f",
+    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=8edb8fc8dcee7cea888d",
+    "/dist/App_modify.js": "/dist/App_modify.js?id=6bb6affdab82c21f2ed4",
+    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=16f83ca1f521e7d2e4a7"
 }
