--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/dist/App.js": "/dist/App.js?id=110f8d9d17f825a7e567",
+    "/dist/App.js": "/dist/App.js?id=8d58e871c2f68972ed58",
     "/dist/css/Global.css": "/dist/css/Global.css?id=06c67255ae20ebd02a42",
-    "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=09944080d1cc61fdafa3",
+    "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=1450586a0b76a858a3e9",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
     "/dist/css/StoreDetailPage.css": "/dist/css/StoreDetailPage.css?id=99d7d7f2e08cb2f6fef5",
     "/dist/css/StoreReviewList.css": "/dist/css/StoreReviewList.css?id=cd52c5e3fc3a1bf58185",
@@ -81,9 +81,17 @@
     "/dist/css/PasswordResetPage.css": "/dist/css/PasswordResetPage.css?id=c0a4098416a1468e30b2",
     "/dist/css/WithdrawalPage.css": "/dist/css/WithdrawalPage.css?id=74217ded1c2edaf4e67f",
     "/dist/css/Page_pc_776_Controller.css": "/dist/css/Page_pc_776_Controller.css?id=a9984e988097fb2ab199",
-    "/dist/App.js.map": "/dist/App.js.map?id=f2cba6dfd72033afeeb1",
-    "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=7657d00a46468aa263aa",
-    "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=95ca17fb6fe47aa00221",
+    "/dist/css/Category_Selecter.css": "/dist/css/Category_Selecter.css?id=1475aa839f9cbe4dfbc1",
+    "/dist/css/App_Category.css": "/dist/css/App_Category.css?id=8e68f7c3f9ec7ceef59f",
+    "/dist/css/Category_Top_Carousel.css": "/dist/css/Category_Top_Carousel.css?id=7a3984f312ca365c6c87",
+    "/dist/css/Category_Top_Carousel_Item.css": "/dist/css/Category_Top_Carousel_Item.css?id=d75bdd19e92ce52ddc96",
+    "/dist/css/Category_Result_List.css": "/dist/css/Category_Result_List.css?id=7e3df2e274a20e1a124b",
+    "/dist/css/Category_Creator_List.css": "/dist/css/Category_Creator_List.css?id=9547f507ed0d65d1a609",
+    "/dist/css/Popup_category_filter.css": "/dist/css/Popup_category_filter.css?id=cc245c1998e976361b71",
+    "/dist/css/Popup_category_sort.css": "/dist/css/Popup_category_sort.css?id=695fd5c9b04325c6c5b6",
+    "/dist/App.js.map": "/dist/App.js.map?id=5aa8295c2f22740ec9cb",
+    "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=7321a693154c5bcc4acb",
+    "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=2fc6d7cace95b6616afa",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
     "/dist/css/StoreDetailPage.css.map": "/dist/css/StoreDetailPage.css.map?id=049197df02353a88d0dc",
     "/dist/css/StoreReviewList.css.map": "/dist/css/StoreReviewList.css.map?id=f607b5863173b0b15aac",
@@ -163,10 +171,20 @@
     "/dist/css/PasswordResetPage.css.map": "/dist/css/PasswordResetPage.css.map?id=946184b6b40c33c150db",
     "/dist/css/WithdrawalPage.css.map": "/dist/css/WithdrawalPage.css.map?id=217998f6e5166d0a4531",
     "/dist/css/Page_pc_776_Controller.css.map": "/dist/css/Page_pc_776_Controller.css.map?id=e977b6446e08797a8c1f",
-    "/dist/App_Login.js": "/dist/App_Login.js?id=51043103742219c2291f",
-    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=bbabf0692f32c837c3b0",
-    "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=bc1aed49a62d10df8a48",
-    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=81b38b2175d544fdf61e",
-    "/dist/App_modify.js": "/dist/App_modify.js?id=b707b477ec71cbb7c05f",
-    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=b2c0c0ea93b2db021c42"
+    "/dist/css/Category_Selecter.css.map": "/dist/css/Category_Selecter.css.map?id=da8310a161164cc14bdc",
+    "/dist/css/App_Category.css.map": "/dist/css/App_Category.css.map?id=961a60ee8466ba13f589",
+    "/dist/css/Category_Top_Carousel.css.map": "/dist/css/Category_Top_Carousel.css.map?id=73d2f14e60edd208aff8",
+    "/dist/css/Category_Top_Carousel_Item.css.map": "/dist/css/Category_Top_Carousel_Item.css.map?id=16a21f1b5447b7ce9e62",
+    "/dist/css/Category_Result_List.css.map": "/dist/css/Category_Result_List.css.map?id=993ef8b5d5fba3cce2ba",
+    "/dist/css/Category_Creator_List.css.map": "/dist/css/Category_Creator_List.css.map?id=502b80e9e6d4750e865f",
+    "/dist/css/Popup_category_filter.css.map": "/dist/css/Popup_category_filter.css.map?id=b7371d7d8e6cab898e04",
+    "/dist/css/Popup_category_sort.css.map": "/dist/css/Popup_category_sort.css.map?id=eda4dbdaa6d9f9d9516d",
+    "/dist/App_Category.js": "/dist/App_Category.js?id=20464089662f86fd705c",
+    "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=6224ec4d0adae5255078",
+    "/dist/App_Login.js": "/dist/App_Login.js?id=d0ac1dcca43f0e4d1bbe",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=591d85e151e620cb1136",
+    "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=2817c1d0f986af52ed8a",
+    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=8c688c4db576fdb3384c",
+    "/dist/App_modify.js": "/dist/App_modify.js?id=38ff7e8dec239e7cd565",
+    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=5a6582e1f57796d73c2b"
 }
