카테고리 정보 팝업 추가

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=8d58e871c2f68972ed58",
+    "/dist/App.js": "/dist/App.js?id=31d74ccef97dc06eb4cf",
     "/dist/css/Global.css": "/dist/css/Global.css?id=06c67255ae20ebd02a42",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=1450586a0b76a858a3e9",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
@@ -89,7 +89,8 @@
     "/dist/css/Category_Creator_List.css": "/dist/css/Category_Creator_List.css?id=9547f507ed0d65d1a609",
     "/dist/css/Popup_category_filter.css": "/dist/css/Popup_category_filter.css?id=cc245c1998e976361b71",
     "/dist/css/Popup_category_sort.css": "/dist/css/Popup_category_sort.css?id=695fd5c9b04325c6c5b6",
-    "/dist/App.js.map": "/dist/App.js.map?id=5aa8295c2f22740ec9cb",
+    "/dist/css/Popup_category_info.css": "/dist/css/Popup_category_info.css?id=3e6c53aea1e94cbb719b",
+    "/dist/App.js.map": "/dist/App.js.map?id=679cc5b85e25be017dcc",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=7321a693154c5bcc4acb",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=2fc6d7cace95b6616afa",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
@@ -179,10 +180,11 @@
     "/dist/css/Category_Creator_List.css.map": "/dist/css/Category_Creator_List.css.map?id=502b80e9e6d4750e865f",
     "/dist/css/Popup_category_filter.css.map": "/dist/css/Popup_category_filter.css.map?id=b7371d7d8e6cab898e04",
     "/dist/css/Popup_category_sort.css.map": "/dist/css/Popup_category_sort.css.map?id=eda4dbdaa6d9f9d9516d",
-    "/dist/App_Category.js": "/dist/App_Category.js?id=20464089662f86fd705c",
-    "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=6224ec4d0adae5255078",
+    "/dist/css/Popup_category_info.css.map": "/dist/css/Popup_category_info.css.map?id=080efdf601449286da14",
+    "/dist/App_Category.js": "/dist/App_Category.js?id=c16a5fe9d3fdba022824",
+    "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=3ddd718043a7d128641b",
     "/dist/App_Login.js": "/dist/App_Login.js?id=d0ac1dcca43f0e4d1bbe",
-    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=591d85e151e620cb1136",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=6d95c9a7168b0c75e516",
     "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=2817c1d0f986af52ed8a",
     "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=8c688c4db576fdb3384c",
     "/dist/App_modify.js": "/dist/App_modify.js?id=38ff7e8dec239e7cd565",
