언어 대응 코드

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/dist/App.js": "/dist/App.js?id=86a9b9759981d4fc6d5f",
-    "/dist/css/Global.css": "/dist/css/Global.css?id=06c67255ae20ebd02a42",
+    "/dist/App.js": "/dist/App.js?id=64a98efe5f00cd726c5a",
+    "/dist/css/Global.css": "/dist/css/Global.css?id=d38c3db2e345daca5002",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=1450586a0b76a858a3e9",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
     "/dist/css/StoreDetailPage.css": "/dist/css/StoreDetailPage.css?id=99d7d7f2e08cb2f6fef5",
@@ -49,7 +49,7 @@
     "/dist/css/StoreManagerHome_newOrderItem.css": "/dist/css/StoreManagerHome_newOrderItem.css?id=694ba56b30cfbdb51969",
     "/dist/css/Popup_StoreReceiptItem.css": "/dist/css/Popup_StoreReceiptItem.css?id=025e49aa39942c87cc87",
     "/dist/css/Profile.css": "/dist/css/Profile.css?id=bc405dad0f49ef3de2f2",
-    "/dist/css/Footer_React.css": "/dist/css/Footer_React.css?id=a3ee0f34a5dc84e6a42d",
+    "/dist/css/Footer_React.css": "/dist/css/Footer_React.css?id=99d55523b5bbbb547d48",
     "/dist/css/Home_Thumb_list.css": "/dist/css/Home_Thumb_list.css?id=4f9c634ef94f18c80ee8",
     "/dist/css/Home_Thumb_Popular_item.css": "/dist/css/Home_Thumb_Popular_item.css?id=cbd1d0ac083e7d6d34d4",
     "/dist/css/Home_Thumb_Product_Label.css": "/dist/css/Home_Thumb_Product_Label.css?id=c0708454009a6c2da0f6",
@@ -90,8 +90,9 @@
     "/dist/css/Popup_category_filter.css": "/dist/css/Popup_category_filter.css?id=cc245c1998e976361b71",
     "/dist/css/Popup_category_sort.css": "/dist/css/Popup_category_sort.css?id=695fd5c9b04325c6c5b6",
     "/dist/css/Popup_category_info.css": "/dist/css/Popup_category_info.css?id=3e6c53aea1e94cbb719b",
-    "/dist/App.js.map": "/dist/App.js.map?id=57fc6a2dce8be72be003",
-    "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=7321a693154c5bcc4acb",
+    "/dist/css/SelectBoxLanguage.css": "/dist/css/SelectBoxLanguage.css?id=43eb40f2da588701e869",
+    "/dist/App.js.map": "/dist/App.js.map?id=364401ffe864ce8b1b0d",
+    "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=8d1825a7a23e840c9b3a",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=2fc6d7cace95b6616afa",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
     "/dist/css/StoreDetailPage.css.map": "/dist/css/StoreDetailPage.css.map?id=049197df02353a88d0dc",
@@ -140,7 +141,7 @@
     "/dist/css/StoreManagerHome_newOrderItem.css.map": "/dist/css/StoreManagerHome_newOrderItem.css.map?id=cc11e9625e5aae449dcf",
     "/dist/css/Popup_StoreReceiptItem.css.map": "/dist/css/Popup_StoreReceiptItem.css.map?id=9d844c988659e31b846d",
     "/dist/css/Profile.css.map": "/dist/css/Profile.css.map?id=e7d4e1e4e1408e325ad2",
-    "/dist/css/Footer_React.css.map": "/dist/css/Footer_React.css.map?id=3aed113e8642705e2192",
+    "/dist/css/Footer_React.css.map": "/dist/css/Footer_React.css.map?id=50937272adc4f953559c",
     "/dist/css/Home_Thumb_list.css.map": "/dist/css/Home_Thumb_list.css.map?id=56833007c34331642e79",
     "/dist/css/Home_Thumb_Popular_item.css.map": "/dist/css/Home_Thumb_Popular_item.css.map?id=aa8378496a45189aa64b",
     "/dist/css/Home_Thumb_Product_Label.css.map": "/dist/css/Home_Thumb_Product_Label.css.map?id=34b242e887f18d3b303d",
@@ -181,12 +182,13 @@
     "/dist/css/Popup_category_filter.css.map": "/dist/css/Popup_category_filter.css.map?id=b7371d7d8e6cab898e04",
     "/dist/css/Popup_category_sort.css.map": "/dist/css/Popup_category_sort.css.map?id=eda4dbdaa6d9f9d9516d",
     "/dist/css/Popup_category_info.css.map": "/dist/css/Popup_category_info.css.map?id=080efdf601449286da14",
-    "/dist/App_Category.js": "/dist/App_Category.js?id=925ce6548760b51bcd20",
-    "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=47f8c2ea303cc12ccefd",
-    "/dist/App_Login.js": "/dist/App_Login.js?id=78d84fa8f230597ab09a",
-    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=2ca2efe2bc84a05c88d4",
-    "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=a5fcfce9545428bd7b52",
-    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=9c06fb23f47d37ce08c0",
-    "/dist/App_modify.js": "/dist/App_modify.js?id=50a8777a97b8715e51ba",
-    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=d3f4dbb96ac101668bd8"
+    "/dist/css/SelectBoxLanguage.css.map": "/dist/css/SelectBoxLanguage.css.map?id=4ab6063ec618863d1c17",
+    "/dist/App_Category.js": "/dist/App_Category.js?id=a3ef6e2e5e7ee1ecd909",
+    "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=6eeadef64947b60f0f75",
+    "/dist/App_Login.js": "/dist/App_Login.js?id=e0c4fd2847e1bcb5c777",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=a922bfd9fa9dcf0011c5",
+    "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=a599e62d027b4e3f92c6",
+    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=94a5ae6350d37bc4415e",
+    "/dist/App_modify.js": "/dist/App_modify.js?id=ced8c993349d67bf7ac5",
+    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=6a9166c4b295486db431"
 }
