--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=608e2bd9d375dedf6808",
+    "/dist/App.js": "/dist/App.js?id=82b0118b5a8592f3ef35",
     "/dist/css/Global.css": "/dist/css/Global.css?id=d38c3db2e345daca5002",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=1450586a0b76a858a3e9",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
@@ -91,7 +91,10 @@
     "/dist/css/Popup_category_sort.css": "/dist/css/Popup_category_sort.css?id=695fd5c9b04325c6c5b6",
     "/dist/css/Popup_category_info.css": "/dist/css/Popup_category_info.css?id=3e6c53aea1e94cbb719b",
     "/dist/css/SelectBoxLanguage.css": "/dist/css/SelectBoxLanguage.css?id=43eb40f2da588701e869",
-    "/dist/App.js.map": "/dist/App.js.map?id=1087f667c37dc7b888d9",
+    "/dist/css/App_Fan_Event.css": "/dist/css/App_Fan_Event.css?id=ea664430a3ad62c02ab2",
+    "/dist/css/Thumb_Project_Item.css": "/dist/css/Thumb_Project_Item.css?id=06a26bec699dacd46273",
+    "/dist/css/Fan_Project_List.css": "/dist/css/Fan_Project_List.css?id=9bb814be0c6503c61379",
+    "/dist/App.js.map": "/dist/App.js.map?id=91e12f7d58b0ae2d0729",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=8d1825a7a23e840c9b3a",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=2fc6d7cace95b6616afa",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
@@ -143,7 +146,7 @@
     "/dist/css/Profile.css.map": "/dist/css/Profile.css.map?id=e7d4e1e4e1408e325ad2",
     "/dist/css/Footer_React.css.map": "/dist/css/Footer_React.css.map?id=50937272adc4f953559c",
     "/dist/css/Home_Thumb_list.css.map": "/dist/css/Home_Thumb_list.css.map?id=56833007c34331642e79",
-    "/dist/css/Home_Thumb_Popular_item.css.map": "/dist/css/Home_Thumb_Popular_item.css.map?id=aa8378496a45189aa64b",
+    "/dist/css/Home_Thumb_Popular_item.css.map": "/dist/css/Home_Thumb_Popular_item.css.map?id=f48bcdca8dfe0dedb1d7",
     "/dist/css/Home_Thumb_Product_Label.css.map": "/dist/css/Home_Thumb_Product_Label.css.map?id=34b242e887f18d3b303d",
     "/dist/css/Home_Thumb_Recommend_Creator_List.css.map": "/dist/css/Home_Thumb_Recommend_Creator_List.css.map?id=e60e4a206e86c266adcf",
     "/dist/css/Home_Thumb_Tag.css.map": "/dist/css/Home_Thumb_Tag.css.map?id=f6a8f0177da57313b985",
@@ -183,12 +186,17 @@
     "/dist/css/Popup_category_sort.css.map": "/dist/css/Popup_category_sort.css.map?id=eda4dbdaa6d9f9d9516d",
     "/dist/css/Popup_category_info.css.map": "/dist/css/Popup_category_info.css.map?id=080efdf601449286da14",
     "/dist/css/SelectBoxLanguage.css.map": "/dist/css/SelectBoxLanguage.css.map?id=4ab6063ec618863d1c17",
-    "/dist/App_Category.js": "/dist/App_Category.js?id=844bd3f488f55d287b25",
-    "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=7edba42cc3027ba5225a",
-    "/dist/App_Login.js": "/dist/App_Login.js?id=396ad57fbc5e2685d18b",
-    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=0c7282126ca76614443c",
-    "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=a599e62d027b4e3f92c6",
-    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=94a5ae6350d37bc4415e",
-    "/dist/App_modify.js": "/dist/App_modify.js?id=ced8c993349d67bf7ac5",
-    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=6a9166c4b295486db431"
+    "/dist/css/App_Fan_Event.css.map": "/dist/css/App_Fan_Event.css.map?id=505c68fca96449e5e1b1",
+    "/dist/css/Thumb_Project_Item.css.map": "/dist/css/Thumb_Project_Item.css.map?id=c2ef4caf76b2ae6f4dfc",
+    "/dist/css/Fan_Project_List.css.map": "/dist/css/Fan_Project_List.css.map?id=1675db29f0b47cb698b0",
+    "/dist/App_Category.js": "/dist/App_Category.js?id=c0329df4d77acee192ad",
+    "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=49b872337762b429554e",
+    "/dist/App_Fan_Event.js": "/dist/App_Fan_Event.js?id=ef24290d5634993858ec",
+    "/dist/App_Fan_Event.js.map": "/dist/App_Fan_Event.js.map?id=2ac22cb356cf01deca33",
+    "/dist/App_Login.js": "/dist/App_Login.js?id=94ef3425e188aa630a43",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=78d7d2c8ea2a9f2313a4",
+    "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=9b7654273ccc0f641728",
+    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=4157f67979b98358e167",
+    "/dist/App_modify.js": "/dist/App_modify.js?id=4a3dbb27d67918dac0ca",
+    "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=ef7abaa72654df22219f"
 }
