--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=873511bc1a3aee7e8798",
+    "/dist/App.js": "/dist/App.js?id=cfe818a2477a9b7cfb46",
     "/dist/css/Global.css": "/dist/css/Global.css?id=d38c3db2e345daca5002",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=1450586a0b76a858a3e9",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=176bf82c149ead3f9f07",
@@ -94,7 +94,9 @@
     "/dist/css/App_Fan_Event.css": "/dist/css/App_Fan_Event.css?id=ea664430a3ad62c02ab2",
     "/dist/css/Thumb_Project_Item.css": "/dist/css/Thumb_Project_Item.css?id=627bc6197fad783c5305",
     "/dist/css/Fan_Project_List.css": "/dist/css/Fan_Project_List.css?id=9bb814be0c6503c61379",
-    "/dist/App.js.map": "/dist/App.js.map?id=02a65eedcfd0c9cb6962",
+    "/dist/css/App_Magazine.css": "/dist/css/App_Magazine.css?id=6a3eb123a03bc6dcd955",
+    "/dist/css/Magazine_List_Item.css": "/dist/css/Magazine_List_Item.css?id=6af78b1739efc27c35fc",
+    "/dist/App.js.map": "/dist/App.js.map?id=b336bd6c8eafcac07d01",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=8d1825a7a23e840c9b3a",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=2fc6d7cace95b6616afa",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=7e5a76fd85715134c305",
@@ -188,15 +190,19 @@
     "/dist/css/SelectBoxLanguage.css.map": "/dist/css/SelectBoxLanguage.css.map?id=4ab6063ec618863d1c17",
     "/dist/css/App_Fan_Event.css.map": "/dist/css/App_Fan_Event.css.map?id=505c68fca96449e5e1b1",
     "/dist/css/Thumb_Project_Item.css.map": "/dist/css/Thumb_Project_Item.css.map?id=64b520180405ddaa2e86",
-    "/dist/css/Fan_Project_List.css.map": "/dist/css/Fan_Project_List.css.map?id=1675db29f0b47cb698b0",
+    "/dist/css/Fan_Project_List.css.map": "/dist/css/Fan_Project_List.css.map?id=9ce8eae4f327372522e9",
+    "/dist/css/App_Magazine.css.map": "/dist/css/App_Magazine.css.map?id=2dce07e28eb741a7f979",
+    "/dist/css/Magazine_List_Item.css.map": "/dist/css/Magazine_List_Item.css.map?id=ce1a59e10740c96c8b80",
     "/dist/App_Category.js": "/dist/App_Category.js?id=c0329df4d77acee192ad",
     "/dist/App_Category.js.map": "/dist/App_Category.js.map?id=49b872337762b429554e",
     "/dist/App_Fan_Event.js": "/dist/App_Fan_Event.js?id=8fa27eb3ae15afb2b9ab",
     "/dist/App_Fan_Event.js.map": "/dist/App_Fan_Event.js.map?id=8d5e187fa08fcb50b57b",
     "/dist/App_Login.js": "/dist/App_Login.js?id=94ef3425e188aa630a43",
-    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=78d7d2c8ea2a9f2313a4",
+    "/dist/App_Login.js.map": "/dist/App_Login.js.map?id=6c61cf42f06687ce7dbd",
+    "/dist/App_Magazine.js": "/dist/App_Magazine.js?id=3cdaa584c25c10ae8ada",
+    "/dist/App_Magazine.js.map": "/dist/App_Magazine.js.map?id=d2181b6aa9536ad9d7ba",
     "/dist/App_PC_776.js": "/dist/App_PC_776.js?id=9b7654273ccc0f641728",
-    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=4157f67979b98358e167",
+    "/dist/App_PC_776.js.map": "/dist/App_PC_776.js.map?id=5a31cf56375ca253c00d",
     "/dist/App_modify.js": "/dist/App_modify.js?id=4a3dbb27d67918dac0ca",
     "/dist/App_modify.js.map": "/dist/App_modify.js.map?id=ef7abaa72654df22219f"
 }
