--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -30,7 +30,6 @@
     "/dist/css/StoreContentConfirm.css": "/dist/css/StoreContentConfirm.css",
     "/dist/css/Popup_text_viewer.css": "/dist/css/Popup_text_viewer.css",
     "/dist/css/StoreISPOrderComplitePage.css": "/dist/css/StoreISPOrderComplitePage.css",
-    "/dist/css/EventPage.css": "/dist/css/EventPage.css",
     "/dist/css/StoreStateProcess.css": "/dist/css/StoreStateProcess.css",
     "/dist/css/StorePlayTimePlan.css": "/dist/css/StorePlayTimePlan.css",
     "/dist/css/Popup_SelectTime.css": "/dist/css/Popup_SelectTime.css",
@@ -99,7 +98,9 @@
     "/dist/css/PhoneConfirm.css": "/dist/css/PhoneConfirm.css",
     "/dist/css/InActivePage.css": "/dist/css/InActivePage.css",
     "/dist/css/App_Top_Banner.css": "/dist/css/App_Top_Banner.css",
+    "/dist/css/App_Event.css": "/dist/css/App_Event.css",
     "/dist/App_Category.js": "/dist/App_Category.js",
+    "/dist/App_Event.js": "/dist/App_Event.js",
     "/dist/App_Fan_Event.js": "/dist/App_Fan_Event.js",
     "/dist/App_Login.js": "/dist/App_Login.js",
     "/dist/App_Magazine.js": "/dist/App_Magazine.js",
