파일 커스텀 다운로드 개선

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -102,6 +102,7 @@
     "/dist/App_Category.js": "/dist/App_Category.js",
     "/dist/App_Event.js": "/dist/App_Event.js",
     "/dist/App_Fan_Event.js": "/dist/App_Fan_Event.js",
+    "/dist/App_File_Download_Temp_Page.js": "/dist/App_File_Download_Temp_Page.js",
     "/dist/App_Login.js": "/dist/App_Login.js",
     "/dist/App_Magazine.js": "/dist/App_Magazine.js",
     "/dist/App_PC_776.js": "/dist/App_PC_776.js",
