--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -99,6 +99,7 @@
     "/dist/css/InActivePage.css": "/dist/css/InActivePage.css",
     "/dist/css/App_Top_Banner.css": "/dist/css/App_Top_Banner.css",
     "/dist/css/App_Event.css": "/dist/css/App_Event.css",
+    "/dist/css/Tag_Thumb_Item.css": "/dist/css/Tag_Thumb_Item.css",
     "/dist/App_Category.js": "/dist/App_Category.js",
     "/dist/App_Event.js": "/dist/App_Event.js",
     "/dist/App_Fan_Event.js": "/dist/App_Fan_Event.js",
